--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "mutagen>=1.47.0",
     "path>=17.1.0",
     "pydub>=0.25.1",
+    "soundfile>=0.13.1",
     "torch>=2.7.1",
     "torchaudio>=2.7.1",
     "youtube-transcript-api>=1.2.0",
